--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -89,7 +89,7 @@
         </div>
         <div class="footer-note">
           <span class="note-icon">💫</span>
-          Built with Angular & TypeScript
+         Be The Game Changer !!!!!
         </div>
       </div>
     </div>
