--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="hero-content">
       <div class="hero-text">
         <h1 class="hero-title animate-fade-in">
-          Hi, I'm <span class="highlight">{{ personalInfo?.name }}</span>
+          Hi, I'm <br><span class="highlight">{{ personalInfo?.name }}</span>
         </h1>
         <h2 class="hero-subtitle animate-fade-in-delay-1">{{ personalInfo?.title }}</h2>
         <p class="hero-tagline animate-fade-in-delay-2">{{ personalInfo?.tagline }}</p>
